--- a/tmux.conf
+++ b/tmux.conf
@@ -17,7 +17,7 @@ new-session -n $HOST
 
 # force a reload of the config file
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded"
+bind r source-file $HOME/.tmux.conf \; display "Reloaded"
 
 # colors
 set -g default-terminal "screen-256color"
@@ -75,6 +75,7 @@ bind m \
     set -g mouse-select-pane on \;\
     set -g mouse-select-window on \;\
     display 'Mouse: ON'
+
 # set mouse off with prefix M
 bind M \
     set -g mode-mouse off \;\
