Remove tmux config binding

--- a/tmux.conf
+++ b/tmux.conf
@@ -2,9 +2,9 @@
 # Config mostly cribbed from http://www.unwiredcouch.com/2013/11/15/my-tmux-setup.html
 #
 # Bind Ctrl-A instead of Ctrl-B, due to screen muscle memory
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+# unbind C-b
+# set -g prefix C-a
+# bind C-a send-prefix
 
 # shortcut for synchronize-panes toggle
 # # START:sync
