--- a/install/Brewfile
+++ b/install/Brewfile
@@ -17,6 +17,7 @@ brew "autojump"
 brew "bash"
 brew "bat"
 brew "glib"
+brew "coreutils"
 brew "openldap"
 brew "folly"
 brew "unbound"
@@ -26,18 +27,19 @@ brew "ffmpeg"
 brew "fzf"
 brew "gh"
 brew "git"
-brew "git-flow"
 brew "gitui"
 brew "gitup"
 brew "htop"
 brew "imagemagick"
 brew "instalooter"
 brew "jq"
+brew "lazygit"
 brew "mackup"
 brew "mas"
 brew "yt-dlp"
 brew "mpv"
-brew "node@14"
+brew "neovim"
+brew "node@16"
 brew "pwgen"
 brew "rclone"
 brew "reattach-to-user-namespace"
@@ -50,7 +52,6 @@ brew "uni2ascii"
 brew "watchman"
 brew "wget"
 brew "wifi-password"
-brew "wp-cli-completion"
 brew "yarn"
 brew "lotyp/formulae/dockutil"
 brew "planetscale/tap/pscale"
@@ -69,9 +70,9 @@ cask "font-ia-writer-duospace"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-smoothing-adjuster"
-cask "freeyourmusic"
 cask "google-chrome"
 cask "insomnia"
+cask "iterm2"
 cask "kapitainsky-rclone-browser"
 cask "keyboardcleantool"
 cask "logitech-options"
@@ -111,5 +112,3 @@ mas "Refined GitHub", id: 1519867270
 mas "Telegram", id: 747648890
 mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
-mas "Twitter", id: 1482454543
-mas "Xcode", id: 497799835
