--- a/install/Brewfile
+++ b/install/Brewfile
@@ -10,7 +10,6 @@ tap "lotyp/formulae"
 tap "planetscale/tap"
 tap "shinokada/tera"
 tap "yt-dlp/taps"
-brew "act"
 brew "asimov", restart_service: true
 brew "atomicparsley"
 brew "autojump"
@@ -29,7 +28,6 @@ brew "gh"
 brew "git"
 brew "gitui"
 brew "gitup"
-brew "htop"
 brew "imagemagick"
 brew "instalooter"
 brew "jq"
@@ -54,6 +52,7 @@ brew "watchman"
 brew "wget"
 brew "wifi-password"
 brew "yarn"
+brew "yq"
 brew "lotyp/formulae/dockutil"
 brew "planetscale/tap/pscale"
 brew "yt-dlp/taps/yt-dlp"
@@ -70,8 +69,10 @@ cask "font-ia-writer-duo"
 cask "font-ia-writer-duospace"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
+cask "font-jetbrains-mono"
 cask "font-smoothing-adjuster"
 cask "google-chrome"
+cask "handbrake"
 cask "insomnia"
 cask "iterm2"
 cask "kapitainsky-rclone-browser"
@@ -81,6 +82,8 @@ cask "microsoft-auto-update"
 cask "microsoft-edge"
 cask "netnewswire"
 cask "notion"
+cask "obs"
+cask "obs-websocket"
 cask "obsidian"
 cask "openemu"
 cask "postman"
@@ -90,15 +93,16 @@ cask "qlmarkdown"
 cask "qlstephen"
 cask "qlvideo"
 cask "raycast"
+cask "scummvm"
 cask "slack"
-cask "sourcetree"
+cask "sony-ps-remote-play"
 cask "tableplus"
 cask "the-unarchiver"
 cask "transmission"
 cask "transmit"
 cask "visual-studio-code"
 cask "vlc"
-cask "whatsapp"
+cask "whatsapp-alpha"
 cask "zoom"
 mas "Actions", id: 1586435171
 mas "AdGuard for Safari", id: 1440147259
@@ -107,9 +111,12 @@ mas "Data Jar", id: 1453273600
 mas "Developer", id: 640199958
 mas "Hand Mirror", id: 1502839586
 mas "Hush", id: 1544743900
+mas "Hyperduck", id: 6444667067
 mas "Jayson", id: 1468691718
+mas "Minimal Twitter", id: 1668204600
 mas "Quick Draft", id: 1496067471
 mas "Refined GitHub", id: 1519867270
 mas "Telegram", id: 747648890
 mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
+mas "Tot", id: 1491071483
