Updates brew packages

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -28,10 +28,12 @@ brew "gh"
 brew "git"
 brew "gitui"
 brew "gitup"
+brew "httpie"
 brew "imagemagick"
 brew "instalooter"
 brew "jq"
 brew "lazygit"
+brew "libusb"
 brew "mackup"
 brew "mas"
 brew "yt-dlp"
@@ -73,8 +75,10 @@ cask "font-jetbrains-mono"
 cask "font-smoothing-adjuster"
 cask "google-chrome"
 cask "handbrake"
+cask "httpie"
 cask "insomnia"
 cask "iterm2"
+cask "jdownloader"
 cask "kapitainsky-rclone-browser"
 cask "keyboardcleantool"
 cask "logitech-options"
@@ -86,6 +90,7 @@ cask "obs"
 cask "obs-websocket"
 cask "obsidian"
 cask "openemu"
+cask "oracle-jdk"
 cask "postman"
 cask "qlcolorcode"
 cask "qlimagesize"
