Adds VSCode Insiders

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -108,6 +108,7 @@ cask "the-unarchiver"
 cask "transmission"
 cask "transmit"
 cask "visual-studio-code"
+cask "visual-studio-code-insiders"
 cask "vlc"
 cask "whatsapp-alpha"
 cask "zoom"
