--- a/install/Brewfile
+++ b/install/Brewfile
@@ -17,7 +17,6 @@ brew "bash"
 brew "bat"
 brew "glib"
 brew "coreutils"
-brew "openldap"
 brew "folly"
 brew "unbound"
 brew "gnutls"
@@ -28,7 +27,7 @@ brew "gh"
 brew "git"
 brew "gitui"
 brew "gitup"
-brew "httpie"
+brew "httpie", link: false
 brew "imagemagick"
 brew "instalooter"
 brew "jq"
@@ -40,6 +39,7 @@ brew "yt-dlp"
 brew "mpv"
 brew "neovim"
 brew "node@16"
+brew "openldap"
 brew "pwgen"
 brew "rclone"
 brew "reattach-to-user-namespace"
@@ -67,7 +67,9 @@ cask "autofirma"
 cask "battle-net"
 cask "caffeine"
 cask "camo-studio"
+cask "cron"
 cask "discord"
+cask "docker"
 cask "firefox"
 cask "font-ia-writer-duo"
 cask "font-ia-writer-duospace"
@@ -82,6 +84,7 @@ cask "insomnia"
 cask "iterm2"
 cask "jdownloader"
 cask "kapitainsky-rclone-browser"
+cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "logitech-options"
 cask "microsoft-auto-update"
@@ -129,3 +132,45 @@ mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
 mas "Tot", id: 1491071483
 mas "Velja", id: 1607635845
+vscode "aaron-bond.better-comments"
+vscode "alefragnani.Bookmarks"
+vscode "blakeh.jump-to-test"
+vscode "bradlc.vscode-tailwindcss"
+vscode "BriteSnow.vscode-toggle-quotes"
+vscode "csstools.postcss"
+vscode "dbaeumer.vscode-eslint"
+vscode "esbenp.prettier-vscode"
+vscode "foxundermoon.shell-format"
+vscode "GitHub.copilot-labs"
+vscode "GitHub.copilot-nightly"
+vscode "GitHub.remotehub"
+vscode "GraphQL.vscode-graphql"
+vscode "GraphQL.vscode-graphql-execution"
+vscode "GraphQL.vscode-graphql-syntax"
+vscode "Gruntfuggly.todo-tree"
+vscode "heybourn.headwind"
+vscode "jdinhlife.gruvbox"
+vscode "JonathanHarty.gruvbox-material-icon-theme"
+vscode "jtladeiras.vscode-inline-sql"
+vscode "miguelsolorio.fluent-icons"
+vscode "mikestead.dotenv"
+vscode "MS-CEINTL.vscode-language-pack-es"
+vscode "ms-vscode.azure-repos"
+vscode "ms-vscode.remote-repositories"
+vscode "ms-vsliveshare.vsliveshare"
+vscode "naumovs.color-highlight"
+vscode "Orta.vscode-twoslash-queries"
+vscode "Prisma.prisma"
+vscode "QuanLi.focus"
+vscode "quicktype.quicktype"
+vscode "richie5um2.vscode-sort-json"
+vscode "sainnhe.gruvbox-material"
+vscode "sleistner.vscode-fileutils"
+vscode "tamj0rd2.ts-quickfixes-extension"
+vscode "tobias-z.vscode-harpoon"
+vscode "tonka3000.raycast"
+vscode "unifiedjs.vscode-mdx"
+vscode "usernamehw.errorlens"
+vscode "vivaxy.vscode-conventional-commits"
+vscode "waderyan.gitblame"
+vscode "wmaurer.change-case"
