chore(Updates last version of `Brewfile`): :zap:

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,10 +1,7 @@
 tap "buo/cask-upgrade"
 tap "homebrew/bundle"
-tap "homebrew/cask"
-tap "homebrew/cask-drivers"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
-tap "homebrew/core"
 tap "homebrew/services"
 tap "lotyp/formulae"
 tap "planetscale/tap"
@@ -38,7 +35,7 @@ brew "mas"
 brew "yt-dlp"
 brew "mpv"
 brew "neovim"
-brew "node@16"
+brew "node@18"
 brew "openldap"
 brew "pwgen"
 brew "rclone"
@@ -58,7 +55,6 @@ brew "yarn"
 brew "yq"
 brew "lotyp/formulae/dockutil"
 brew "planetscale/tap/pscale"
-brew "yt-dlp/taps/yt-dlp"
 cask "adobe-acrobat-reader"
 cask "aerial"
 cask "arc"
@@ -72,7 +68,6 @@ cask "discord"
 cask "docker"
 cask "firefox"
 cask "font-ia-writer-duo"
-cask "font-ia-writer-duospace"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-jetbrains-mono"
@@ -110,6 +105,7 @@ cask "tableplus"
 cask "the-unarchiver"
 cask "transmission"
 cask "transmit"
+cask "via"
 cask "visual-studio-code"
 cask "vlc"
 cask "whatsapp-alpha"
@@ -131,6 +127,7 @@ mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
 mas "Tot", id: 1491071483
 mas "Velja", id: 1607635845
+mas "WireGuard", id: 1451685025
 vscode "aaron-bond.better-comments"
 vscode "alefragnani.Bookmarks"
 vscode "blakeh.jump-to-test"
@@ -140,11 +137,10 @@ vscode "csstools.postcss"
 vscode "dbaeumer.vscode-eslint"
 vscode "esbenp.prettier-vscode"
 vscode "foxundermoon.shell-format"
+vscode "GitHub.copilot"
+vscode "GitHub.copilot-chat"
 vscode "GitHub.copilot-labs"
-vscode "GitHub.copilot-nightly"
-vscode "GitHub.remotehub"
 vscode "GraphQL.vscode-graphql"
-vscode "GraphQL.vscode-graphql-execution"
 vscode "GraphQL.vscode-graphql-syntax"
 vscode "Gruntfuggly.todo-tree"
 vscode "heybourn.headwind"
@@ -154,19 +150,15 @@ vscode "jtladeiras.vscode-inline-sql"
 vscode "miguelsolorio.fluent-icons"
 vscode "mikestead.dotenv"
 vscode "MS-CEINTL.vscode-language-pack-es"
-vscode "ms-vscode.azure-repos"
-vscode "ms-vscode.remote-repositories"
 vscode "ms-vsliveshare.vsliveshare"
 vscode "naumovs.color-highlight"
-vscode "Orta.vscode-twoslash-queries"
+vscode "pabue.linear-theme"
 vscode "Prisma.prisma"
 vscode "QuanLi.focus"
 vscode "quicktype.quicktype"
 vscode "richie5um2.vscode-sort-json"
 vscode "sainnhe.gruvbox-material"
 vscode "sleistner.vscode-fileutils"
-vscode "tamj0rd2.ts-quickfixes-extension"
-vscode "tobias-z.vscode-harpoon"
 vscode "tonka3000.raycast"
 vscode "unifiedjs.vscode-mdx"
 vscode "usernamehw.errorlens"
