chore: updates install files

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "lotyp/formulae"
+tap "oven-sh/bun"
 tap "planetscale/tap"
 tap "shinokada/tera"
 tap "yt-dlp/taps"
@@ -19,6 +20,7 @@ brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
 brew "ffmpeg"
+brew "fx"
 brew "fzf"
 brew "gh"
 brew "git"
@@ -54,42 +56,36 @@ brew "wifi-password"
 brew "yarn"
 brew "yq"
 brew "lotyp/formulae/dockutil"
+brew "oven-sh/bun/bun"
 brew "planetscale/tap/pscale"
 cask "adobe-acrobat-reader"
 cask "aerial"
 cask "arc"
-cask "authy"
 cask "autofirma"
 cask "battle-net"
 cask "caffeine"
 cask "camo-studio"
-cask "cron"
 cask "discord"
 cask "docker"
-cask "firefox"
 cask "font-ia-writer-duo"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-jetbrains-mono"
 cask "font-smoothing-adjuster"
-cask "google-chrome"
 cask "handbrake"
 cask "httpie"
-cask "insomnia"
 cask "iterm2"
-cask "jdownloader"
 cask "kapitainsky-rclone-browser"
 cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "logitech-options"
-cask "microsoft-auto-update"
-cask "microsoft-edge"
 cask "netnewswire"
 cask "notion"
 cask "obs"
 cask "obs-websocket"
 cask "obsidian"
 cask "openemu"
+cask "openvpn-connect"
 cask "oracle-jdk"
 cask "postman"
 cask "qlcolorcode"
@@ -108,18 +104,22 @@ cask "transmit"
 cask "via"
 cask "visual-studio-code"
 cask "vlc"
-cask "whatsapp-alpha"
-cask "zoom"
+cask "ytmdesktop-youtube-music"
 mas "Actions", id: 1586435171
 mas "AdGuard for Safari", id: 1440147259
+mas "Amazing AI", id: 1660147028
 mas "Collected", id: 1511343960
 mas "Data Jar", id: 1453273600
 mas "Developer", id: 640199958
+mas "Disk Speed Test", id: 425264550
+mas "GarageBand", id: 682658836
 mas "Hand Mirror", id: 1502839586
 mas "Hush", id: 1544743900
 mas "Hyperduck", id: 6444667067
+mas "iMovie", id: 408981434
 mas "Jayson", id: 1468691718
-mas "Minimal Twitter", id: 1668204600
+mas "Minimal Theme for Twitter / X", id: 1668204600
+mas "Photomator", id: 1444636541
 mas "Quick Draft", id: 1496067471
 mas "Refined GitHub", id: 1519867270
 mas "Telegram", id: 747648890
@@ -128,8 +128,10 @@ mas "Things", id: 904280696
 mas "Tot", id: 1491071483
 mas "Velja", id: 1607635845
 mas "WireGuard", id: 1451685025
+mas "WhatsApp", id: 310633997
 vscode "aaron-bond.better-comments"
 vscode "alefragnani.Bookmarks"
+vscode "astro-build.astro-vscode"
 vscode "blakeh.jump-to-test"
 vscode "bradlc.vscode-tailwindcss"
 vscode "BriteSnow.vscode-toggle-quotes"
@@ -147,21 +149,29 @@ vscode "heybourn.headwind"
 vscode "jdinhlife.gruvbox"
 vscode "JonathanHarty.gruvbox-material-icon-theme"
 vscode "jtladeiras.vscode-inline-sql"
+vscode "markis.code-coverage"
 vscode "miguelsolorio.fluent-icons"
 vscode "mikestead.dotenv"
 vscode "MS-CEINTL.vscode-language-pack-es"
+vscode "ms-vscode.live-server"
 vscode "ms-vsliveshare.vsliveshare"
 vscode "naumovs.color-highlight"
+vscode "Nautigsam.go-to-test"
 vscode "pabue.linear-theme"
+vscode "paul-mannino.vscode-create-test-file"
+vscode "pmndrs.pmndrs"
 vscode "Prisma.prisma"
 vscode "QuanLi.focus"
 vscode "quicktype.quicktype"
 vscode "richie5um2.vscode-sort-json"
+vscode "ryanluker.vscode-coverage-gutters"
 vscode "sainnhe.gruvbox-material"
 vscode "sleistner.vscode-fileutils"
+vscode "tobias-z.vscode-harpoon"
 vscode "tonka3000.raycast"
 vscode "unifiedjs.vscode-mdx"
 vscode "usernamehw.errorlens"
 vscode "vivaxy.vscode-conventional-commits"
 vscode "waderyan.gitblame"
 vscode "wmaurer.change-case"
+vscode "yoavbls.pretty-ts-errors"
