chore: updates installed packaged

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,13 +1,11 @@
-tap "buo/cask-upgrade"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "lotyp/formulae"
 tap "oven-sh/bun"
-tap "planetscale/tap"
-tap "shinokada/tera"
 tap "yt-dlp/taps"
+tap "zackelia/formulae"
 brew "asimov", restart_service: true
 brew "atomicparsley"
 brew "autojump"
@@ -19,7 +17,7 @@ brew "folly"
 brew "unbound"
 brew "gnutls"
 brew "harfbuzz"
-brew "ffmpeg"
+brew "ffmpeg@6"
 brew "fx"
 brew "fzf"
 brew "gh"
@@ -34,10 +32,8 @@ brew "lazygit"
 brew "libusb"
 brew "mackup"
 brew "mas"
-brew "yt-dlp"
-brew "mpv"
 brew "neovim"
-brew "node@18", link: true
+brew "node@20", link: true
 brew "openldap"
 brew "pwgen"
 brew "rclone"
@@ -53,14 +49,15 @@ brew "uni2ascii"
 brew "watchman"
 brew "wget"
 brew "wifi-password"
-brew "yarn"
 brew "yq"
+brew "yt-dlp"
 brew "lotyp/formulae/dockutil"
 brew "oven-sh/bun/bun"
-brew "planetscale/tap/pscale"
+brew "zackelia/formulae/bclm"
 cask "adobe-acrobat-reader"
 cask "aerial"
 cask "arc"
+cask "audacity"
 cask "autofirma"
 cask "battle-net"
 cask "caffeine"
@@ -68,24 +65,25 @@ cask "camo-studio"
 cask "dbngin"
 cask "discord"
 cask "docker"
+cask "font-geist-mono"
 cask "font-ia-writer-duo"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-jetbrains-mono"
-cask "font-smoothing-adjuster"
+cask "fontsmoothingadjuster"
 cask "handbrake"
 cask "httpie"
 cask "iterm2"
 cask "kapitainsky-rclone-browser"
 cask "karabiner-elements"
 cask "keyboardcleantool"
+cask "kid3"
 cask "logitech-options"
 cask "netnewswire"
 cask "notion"
 cask "obs"
 cask "obs-websocket"
 cask "obsidian"
-cask "openemu"
 cask "openvpn-connect"
 cask "oracle-jdk"
 cask "postman"
@@ -105,10 +103,10 @@ cask "transmit"
 cask "via"
 cask "visual-studio-code"
 cask "vlc"
-cask "ytmdesktop-youtube-music"
 mas "Actions", id: 1586435171
 mas "AdGuard for Safari", id: 1440147259
 mas "Amazing AI", id: 1660147028
+mas "Bridges", id: 6466660721
 mas "Collected", id: 1511343960
 mas "Data Jar", id: 1453273600
 mas "Developer", id: 640199958
@@ -119,6 +117,7 @@ mas "Hyperduck", id: 6444667067
 mas "iMovie", id: 408981434
 mas "Jayson", id: 1468691718
 mas "Minimal Theme for Twitter / X", id: 1668204600
+mas "Paper", id: 1143513744
 mas "Photomator", id: 1444636541
 mas "Quick Draft", id: 1496067471
 mas "Refined GitHub", id: 1519867270
@@ -129,46 +128,40 @@ mas "Tot", id: 1491071483
 mas "Userscripts-Mac-App", id: 1463298887
 mas "Velja", id: 1607635845
 mas "WireGuard", id: 1451685025
-mas "WhatsApp", id: 310633997
+mas "Xcode", id: 497799835
+mas "‎WhatsApp", id: 310633997
 vscode "aaron-bond.better-comments"
-vscode "alefragnani.Bookmarks"
-vscode "astro-build.astro-vscode"
-vscode "blakeh.jump-to-test"
+vscode "antfu.icons-carbon"
 vscode "bradlc.vscode-tailwindcss"
-vscode "BriteSnow.vscode-toggle-quotes"
+vscode "britesnow.vscode-toggle-quotes"
 vscode "csstools.postcss"
 vscode "dbaeumer.vscode-eslint"
 vscode "esbenp.prettier-vscode"
+vscode "exotech-code.theme-ibm-carbon-color-theme"
 vscode "foxundermoon.shell-format"
-vscode "GitHub.copilot"
-vscode "GitHub.copilot-chat"
-vscode "GitHub.copilot-labs"
-vscode "GraphQL.vscode-graphql"
-vscode "GraphQL.vscode-graphql-syntax"
-vscode "Gruntfuggly.todo-tree"
-vscode "heybourn.headwind"
+vscode "github.copilot"
+vscode "github.copilot-chat"
+vscode "gruntfuggly.shifter"
+vscode "gruntfuggly.todo-tree"
 vscode "jdinhlife.gruvbox"
-vscode "JonathanHarty.gruvbox-material-icon-theme"
+vscode "jonathanharty.gruvbox-material-icon-theme"
 vscode "jtladeiras.vscode-inline-sql"
 vscode "markis.code-coverage"
 vscode "miguelsolorio.fluent-icons"
 vscode "mikestead.dotenv"
-vscode "MS-CEINTL.vscode-language-pack-es"
+vscode "ms-ceintl.vscode-language-pack-es"
 vscode "ms-vscode.live-server"
 vscode "ms-vsliveshare.vsliveshare"
 vscode "naumovs.color-highlight"
-vscode "Nautigsam.go-to-test"
-vscode "pabue.linear-theme"
+vscode "nautigsam.go-to-test"
 vscode "paul-mannino.vscode-create-test-file"
 vscode "pmndrs.pmndrs"
-vscode "Prisma.prisma"
-vscode "QuanLi.focus"
+vscode "prisma.prisma"
+vscode "quanli.focus"
 vscode "quicktype.quicktype"
 vscode "richie5um2.vscode-sort-json"
 vscode "ryanluker.vscode-coverage-gutters"
-vscode "sainnhe.gruvbox-material"
 vscode "sleistner.vscode-fileutils"
-vscode "tobias-z.vscode-harpoon"
 vscode "tonka3000.raycast"
 vscode "unifiedjs.vscode-mdx"
 vscode "usernamehw.errorlens"
