feat: update Brewfile to add new applications and modify service restart behavior

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,18 +1,21 @@
+tap "buo/cask-upgrade"
 tap "homebrew/bundle"
 tap "homebrew/cask-fonts"
 tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "lotyp/formulae"
 tap "oven-sh/bun"
+tap "smudge/smudge"
 tap "yt-dlp/taps"
 tap "zackelia/formulae"
-brew "asimov", restart_service: true
+brew "asimov", restart_service: :changed
 brew "atomicparsley"
 brew "autojump"
 brew "bash"
 brew "bat"
 brew "glib"
 brew "coreutils"
+brew "docker"
 brew "folly"
 brew "harfbuzz"
 brew "ffmpeg@6", link: true
@@ -26,6 +29,7 @@ brew "httpie", link: false
 brew "imagemagick"
 brew "instalooter"
 brew "jq"
+brew "lazydocker"
 brew "lazygit"
 brew "libusb"
 brew "mackup"
@@ -50,6 +54,7 @@ brew "yq"
 brew "yt-dlp"
 brew "lotyp/formulae/dockutil"
 brew "oven-sh/bun/bun"
+brew "smudge/smudge/nightlight"
 brew "zackelia/formulae/bclm"
 cask "adobe-acrobat-reader"
 cask "aerial"
@@ -68,7 +73,6 @@ cask "font-ia-writer-duo"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-jetbrains-mono"
-cask "fontsmoothingadjuster"
 cask "ghostty"
 cask "handbrake"
 cask "httpie"
@@ -84,7 +88,6 @@ cask "obs"
 cask "obs-websocket"
 cask "obsidian"
 cask "openmtp"
-cask "openvpn-connect"
 cask "oracle-jdk"
 cask "postman"
 cask "qlcolorcode"
@@ -130,42 +133,3 @@ mas "Velja", id: 1607635845
 mas "WireGuard", id: 1451685025
 mas "Xcode", id: 497799835
 mas "‎WhatsApp", id: 310633997
-vscode "aaron-bond.better-comments"
-vscode "antfu.icons-carbon"
-vscode "bradlc.vscode-tailwindcss"
-vscode "britesnow.vscode-toggle-quotes"
-vscode "csstools.postcss"
-vscode "dbaeumer.vscode-eslint"
-vscode "esbenp.prettier-vscode"
-vscode "exotech-code.theme-ibm-carbon-color-theme"
-vscode "foxundermoon.shell-format"
-vscode "github.copilot"
-vscode "github.copilot-chat"
-vscode "gruntfuggly.shifter"
-vscode "gruntfuggly.todo-tree"
-vscode "jdinhlife.gruvbox"
-vscode "jonathanharty.gruvbox-material-icon-theme"
-vscode "jtladeiras.vscode-inline-sql"
-vscode "markis.code-coverage"
-vscode "miguelsolorio.fluent-icons"
-vscode "mikestead.dotenv"
-vscode "ms-ceintl.vscode-language-pack-es"
-vscode "ms-vscode.live-server"
-vscode "ms-vsliveshare.vsliveshare"
-vscode "naumovs.color-highlight"
-vscode "nautigsam.go-to-test"
-vscode "paul-mannino.vscode-create-test-file"
-vscode "pmndrs.pmndrs"
-vscode "prisma.prisma"
-vscode "quanli.focus"
-vscode "quicktype.quicktype"
-vscode "richie5um2.vscode-sort-json"
-vscode "ryanluker.vscode-coverage-gutters"
-vscode "sleistner.vscode-fileutils"
-vscode "tonka3000.raycast"
-vscode "unifiedjs.vscode-mdx"
-vscode "usernamehw.errorlens"
-vscode "vivaxy.vscode-conventional-commits"
-vscode "waderyan.gitblame"
-vscode "wmaurer.change-case"
-vscode "yoavbls.pretty-ts-errors"
