--- a/install/Brewfile
+++ b/install/Brewfile
@@ -18,7 +18,7 @@ brew "coreutils"
 brew "docker"
 brew "folly"
 brew "harfbuzz"
-brew "ffmpeg@6", link: true
+brew "ffmpeg@6"
 brew "fx"
 brew "fzf"
 brew "gh"
@@ -34,6 +34,7 @@ brew "lazygit"
 brew "libusb"
 brew "mackup"
 brew "mas"
+brew "musikcube"
 brew "neovim"
 brew "node@20", link: true
 brew "openldap"
@@ -99,6 +100,7 @@ cask "raycast"
 cask "scummvm"
 cask "slack"
 cask "sony-ps-remote-play"
+cask "syncthing"
 cask "tableplus"
 cask "transmission"
 cask "transmit"
@@ -107,29 +109,26 @@ cask "visual-studio-code"
 cask "vlc"
 mas "Actions", id: 1586435171
 mas "AdGuard for Safari", id: 1440147259
-mas "Amazing AI", id: 1660147028
-mas "Bridges", id: 6466660721
+mas "Artifacts", id: 0
+mas "Consent-O-Matic", id: 1606897889
 mas "Data Jar", id: 1453273600
 mas "Developer", id: 640199958
 mas "Flighty", id: 1358823008
-mas "GarageBand", id: 682658836
-mas "Hand Mirror", id: 1502839586
 mas "Hush", id: 1544743900
 mas "Hyperduck", id: 6444667067
-mas "iMovie", id: 408981434
-mas "Jayson", id: 1468691718
-mas "Minimal Theme for Twitter / X", id: 1668204600
+mas "LocalSend", id: 1661733229
+mas "Minimal Twitter", id: 1668204600
 mas "Parcel", id: 639968404
-mas "Photomator", id: 1444636541
 mas "Quick Draft", id: 1496067471
 mas "Raycast Companion", id: 6738274497
 mas "Refined GitHub", id: 1519867270
+mas "Sink It", id: 6449873635
+mas "Supercopy", id: 6477720316
+mas "Synctrain", id: 6553985316
 mas "Telegram", id: 747648890
 mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
-mas "Tot", id: 1491071483
-mas "Userscripts-Mac-App", id: 1463298887
+mas "Userscripts", id: 1463298887
 mas "Velja", id: 1607635845
+mas "WhatsApp", id: 310633997
 mas "WireGuard", id: 1451685025
-mas "Xcode", id: 497799835
-mas "‎WhatsApp", id: 310633997
