chore: update Brewfile and Npmfile with new packages and improved migration script

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -13,12 +13,9 @@ brew "atomicparsley"
 brew "autojump"
 brew "bash"
 brew "bat"
-brew "glib"
+brew "cmake"
 brew "coreutils"
-brew "docker"
-brew "folly"
-brew "harfbuzz"
-brew "ffmpeg@6"
+brew "docker", link: false
 brew "fx"
 brew "fzf"
 brew "gh"
@@ -27,35 +24,35 @@ brew "gitui"
 brew "gitup"
 brew "httpie", link: false
 brew "imagemagick"
-brew "instalooter"
 brew "jq"
 brew "lazydocker"
 brew "lazygit"
 brew "libusb"
+brew "lotyp/formulae/dockutil"
 brew "mackup"
 brew "mas"
 brew "musikcube"
 brew "neovim"
 brew "node@20", link: true
 brew "openldap"
+brew "oven-sh/bun/bun"
+brew "pipx"
 brew "pwgen"
-brew "rclone"
 brew "reattach-to-user-namespace"
 brew "rename"
 brew "ruby"
+brew "smudge/smudge/nightlight"
 brew "ssh-copy-id"
 brew "tldr"
 brew "tmux"
 brew "tree"
 brew "uni2ascii"
+brew "uv"
 brew "watchman"
 brew "wget"
 brew "wifi-password"
 brew "yq"
 brew "yt-dlp"
-brew "lotyp/formulae/dockutil"
-brew "oven-sh/bun/bun"
-brew "smudge/smudge/nightlight"
 brew "zackelia/formulae/bclm"
 cask "adobe-acrobat-reader"
 cask "aerial"
@@ -68,16 +65,16 @@ cask "camo-studio"
 cask "cursor"
 cask "dbngin"
 cask "discord"
-cask "docker"
+cask "docker-desktop"
 cask "font-geist-mono"
 cask "font-ia-writer-duo"
 cask "font-ia-writer-mono"
 cask "font-ia-writer-quattro"
 cask "font-jetbrains-mono"
 cask "ghostty"
-cask "handbrake"
-cask "httpie"
-cask "iterm2"
+cask "handbrake-app"
+cask "httpie-desktop"
+cask "jdownloader"
 cask "kapitainsky-rclone-browser"
 cask "karabiner-elements"
 cask "keyboardcleantool"
@@ -97,11 +94,12 @@ cask "qlmarkdown"
 cask "qlstephen"
 cask "qlvideo"
 cask "raycast"
-cask "scummvm"
+cask "scummvm-app"
 cask "slack"
 cask "sony-ps-remote-play"
-cask "syncthing"
+cask "syncthing-app"
 cask "tableplus"
+cask "the-unarchiver"
 cask "transmission"
 cask "transmit"
 cask "via"
