fix: remove OMZP snippets, fix zsh completions, update Brewfile

--- a/install/Brewfile
+++ b/install/Brewfile
@@ -1,24 +1,25 @@
 tap "buo/cask-upgrade"
 tap "homebrew/bundle"
-tap "homebrew/cask-fonts"
-tap "homebrew/cask-versions"
 tap "homebrew/services"
 tap "lotyp/formulae"
 tap "oven-sh/bun"
+tap "shopify/shopify"
 tap "smudge/smudge"
+tap "stripe/stripe-cli"
 tap "yt-dlp/taps"
 tap "zackelia/formulae"
 brew "asimov", restart_service: :changed
 brew "atomicparsley"
+brew "aws-sam-cli"
 brew "bat"
+brew "cloudflared", restart_service: :changed
 brew "cmake"
 brew "coreutils"
-brew "docker", link: false
+brew "ffmpeg"
 brew "fx"
 brew "fzf"
-brew "git-delta"
 brew "gh"
-brew "git"
+brew "git-delta"
 brew "gitui"
 brew "gitup"
 brew "httpie", link: false
@@ -30,17 +31,21 @@ brew "libusb"
 brew "lotyp/formulae/dockutil"
 brew "mackup"
 brew "mas"
-brew "musikcube"
+brew "mise"
 brew "neovim"
 brew "node@20", link: true
+brew "opencode"
 brew "openldap"
 brew "oven-sh/bun/bun"
 brew "pwgen"
 brew "reattach-to-user-namespace"
 brew "rename"
+brew "ripgrep"
 brew "ruby"
+brew "shopify/shopify/shopify-cli"
 brew "smudge/smudge/nightlight"
 brew "ssh-copy-id"
+brew "stripe/stripe-cli/stripe"
 brew "tldr"
 brew "tmux"
 brew "tree"
@@ -52,6 +57,7 @@ brew "wifi-password"
 brew "yq"
 brew "yt-dlp"
 brew "zackelia/formulae/bclm"
+brew "zoxide"
 cask "adobe-acrobat-reader"
 cask "aerial"
 cask "arc"
@@ -63,7 +69,6 @@ cask "camo-studio"
 cask "cursor"
 cask "dbngin"
 cask "discord"
-cask "docker-desktop"
 cask "font-geist-mono"
 cask "font-ia-writer-duo"
 cask "font-ia-writer-mono"
@@ -72,25 +77,35 @@ cask "font-jetbrains-mono"
 cask "ghostty"
 cask "handbrake-app"
 cask "httpie-desktop"
+cask "imageoptim"
 cask "jdownloader"
+cask "jellyfin-media-player"
 cask "kapitainsky-rclone-browser"
 cask "karabiner-elements"
 cask "keyboardcleantool"
 cask "kid3"
+cask "kiro"
 cask "logitech-options"
+cask "macs-fan-control"
+cask "macwhisper"
 cask "netnewswire"
+cask "ngrok"
 cask "notion"
 cask "obs"
 cask "obs-websocket"
 cask "obsidian"
+cask "openemu"
 cask "openmtp"
 cask "oracle-jdk"
+cask "orbstack"
+cask "pcsx2"
 cask "postman"
 cask "qlcolorcode"
 cask "qlimagesize"
 cask "qlmarkdown"
 cask "qlstephen"
 cask "qlvideo"
+cask "raspberry-pi-imager"
 cask "raycast"
 cask "scummvm-app"
 cask "slack"
@@ -99,7 +114,6 @@ cask "syncthing-app"
 cask "tableplus"
 cask "the-unarchiver"
 cask "transmission"
-cask "transmit"
 cask "via"
 cask "visual-studio-code"
 cask "vlc"
@@ -114,13 +128,15 @@ mas "Hush", id: 1544743900
 mas "Hyperduck", id: 6444667067
 mas "LocalSend", id: 1661733229
 mas "Minimal Twitter", id: 1668204600
-mas "Parcel", id: 639968404
+mas "Parcel", id: 375589283
 mas "Quick Draft", id: 1496067471
 mas "Raycast Companion", id: 6738274497
 mas "Refined GitHub", id: 1519867270
 mas "Sink It", id: 6449873635
 mas "Supercopy", id: 6477720316
 mas "Synctrain", id: 6553985316
+mas "Tailscale", id: 1475387142
+mas "Tapestry", id: 6448078074
 mas "Telegram", id: 747648890
 mas "TestFlight", id: 899247664
 mas "Things", id: 904280696
