refactor(tmux): migrate to TPM plugins with gruvbox theme

--- a/config/tmux.conf
+++ b/config/tmux.conf
@@ -7,13 +7,11 @@
 # bind C-a send-prefix
 
 # shortcut for synchronize-panes toggle
-# # START:sync
 bind C-s set-window-option synchronize-panes
-# # END:sync
 
-
-# if run as "tmux attach", create a session if one does not already exist
+# Auto-create session if none exists
 new-session -n $HOST
+
 
 # force a reload of the config file
 unbind r
@@ -27,12 +25,6 @@ set -g default-terminal "screen-256color"
 # setw -g utf8 on
 # set -g status-utf8 on
 
-# status bar config
-set -g status-left "#h:[#S]"
-set -g status-left-length 50
-set -g status-right-length 50
-set -g status-right "%H:%M %Y-%h-%d"
-setw -g window-status-current-format "|#I:#W|"
 set-window-option -g automatic-rename on
 
 # listen to alerts from all windows
@@ -84,28 +76,23 @@ set -g history-limit 100000
 
 
 ##
-## THEME - Solarized Dark (tmux 3.x syntax)
+## PLUGINS (TPM)
 ##
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'egel/tmux-gruvbox'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
 
-# Status bar
-set -g status-style bg=default,fg=yellow
+# Gruvbox theme
+set -g @tmux-gruvbox 'dark'
+set -g @tmux-gruvbox-right-status-y '%H:%M #(cd #{pane_current_path}; git branch --show-current 2>/dev/null)'
+set -g @tmux-gruvbox-right-status-z ''
 
-# Window status
-setw -g window-status-style fg=brightgreen,bg=default
-setw -g window-status-current-style fg=yellow,bg=default,bright
-setw -g window-status-bell-style fg=white,bg=brightred,bold
+# Session persistence
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '5'
 
-# Pane borders
-set -g pane-border-style fg=black,bg=default
-set -g pane-active-border-style fg=yellow,bg=default
-
-# Messages
-set -g message-style fg=yellow,bg=black
-
-# Pane number display
-set -g display-panes-active-colour yellow
-set -g display-panes-colour brightblue
-
-# Clock
-setw -g clock-mode-colour yellow
-setw -g clock-mode-style 24
+# Initialize TPM (keep at bottom)
+run '~/.tmux/plugins/tpm/tpm'
